--- a/style.css
+++ b/style.css
@@ -111,19 +111,19 @@ nav ul li a{
     
 /* UBICACION */
 
-.mapaubicacion{
-    width: 95%;
+.row{
+    margin: 20px 20px 20px 20px;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-.tamaño_mapa{
-    margin: 10px 20px 20px;
-    width: 500px;
-    height: 300px;
-    border: solid 2px black; 
+    justify-content: center;
 }
 
+.tamaño_mapa{
+   
+    margin: 20px 20px 20px 20px;
+    height: 300px;
+
+} 
+ 
     /* GALERIA */
 
 .galeria{
@@ -141,6 +141,7 @@ nav ul li a{
 .galeria__imagen__jogger{
     width: 100%;
     height: 600px;
+    padding: 20px 20px 20px 20px;
      
 }
 
@@ -163,32 +164,13 @@ nav ul li a{
     font-size: 20px;
     color: black;
     font-family: 'League Gothic', sans-serif;
+    padding-right: 20px;
+    padding-left: 20px;
+    
 }
     /* QUIENES SOMOS */
 .imagen__somos{
-    width: 300px;
-    height: 300px;
-}
-
-.grid__item1{
-   padding: 20px 20px 20px 20px;
-   border:solid 2px black;
-   display: flex;
-   flex-direction: row;
-}
-   
-.grid__item2{
-    padding: 20px 20px 20px 20px;
-    padding-bottom: 20px;
-    border:solid 2px black;
-    display: flex;
-    flex-direction: row-reverse;
-}
-
-.grid__item3{
-    padding: 20px 20px 20px 20px;
-    padding-bottom: 20px;
-    border:solid 2px black;
-    display: flex;
-    flex-direction: row;
+    width: 100%;
+    height: 350px;
+    padding: 20px 20px 20px 20px
 }
