--- a/style.css
+++ b/style.css
@@ -74,14 +74,14 @@ nav ul li a{
 }
 
 .video_index{
+ width: 100%;
+ height: auto;
  display: flex;
  justify-content: center;
  padding: 20px 20px 20px 20px;
  
 } 
-.video_index iframe{
-    border: solid 3px black;
-}
+
 
 .carousel-item{
     padding: 20px 20px 20px 20px;
@@ -104,7 +104,7 @@ nav ul li a{
    
 }
 .nav-link {
-    font-size: 30px;
+    font-size: 20px;
 }
 
    
@@ -171,6 +171,6 @@ nav ul li a{
     /* QUIENES SOMOS */
 .imagen__somos{
     width: 100%;
-    height: 350px;
-    padding: 20px 20px 20px 20px
+    height: auto;
+    padding: 20px 80px 20px 80px
 }
