--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -8,12 +8,12 @@
     font-family: 'League Gothic', sans-serif;
 }*/
 
-/* INDEX */
+
 .fondopantalla{
     
     height: 100%;
     width: 100%;
-    background-image: url("./imagenes/fondodepantalla.jpg");
+    background-image: url("../imagenes/fondodepantalla.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -115,72 +115,4 @@ nav ul li a{
 .nav-link {
     font-size: 30px;
     color: rgb(32, 32, 37);
-}
-
-/* UBICACION */
-
-.row{
-    margin: 20px 20px 20px 20px;
-    display: flex;
-    justify-content: center;
-}
-
-.tamaño_mapa{
-    
-    margin: 10px 10px 10px 10px;
-    height: 80%;
-    width: auto;
-    
-} 
- 
-    /* GALERIA */
-
-.galeria{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-evenly;
-    align-content: space-around;
-}
-.galeria__imagen{
-    width: 400px;
-    display: flex;
-    flex-direction: column;
-    margin: 20px auto;
-} 
-.galeria__imagen__jogger{
-    width: 100%;
-    height: 600px;
-    padding: 20px 20px 20px 20px;
-     
-}
-
-.galeria__imagen__texto{
-   text-align: center;
-}
-
-    /* CONTACTO */
-.colorContacto{
-        color: whitesmoke;
-      
- } 
-
-.formulario__item{
-    display: flex;
-    flex-direction: column;
-    align-items: start;;
-    padding-top: 150px;
-    padding-bottom: 150px;
-    font-size: 20px;
-    color: black;
-    font-family: 'League Gothic', sans-serif;
-    padding-right: 20px;
-    padding-left: 20px;
-    
-}
-    /* QUIENES SOMOS */
-.imagen__somos{
-    width: 100%;
-    height: auto;
-    padding: 10px 20%;
-    object-fit: fill ;
 }
